2010-01-22  Matthew Mundell <matthew.mundell@intevation.de>

	Remain on the task page after deleting the task's last report.

	* src/html/src/omp.xsl (html-report-table): Apply the report
	template explicitly.
	(report): Replace with body of get_status_response/task/report.  Go two
	up to get to the task ID.
	(get_status_response/task/report): Remove.
	(get_status_response): Determine if the reports are present by checking
	for task/reports instead of a task/report.
	(commands_response/get_status_response): Remove, redundant.

2010-01-21  Matthew Mundell <matthew.mundell@intevation.de>

	* src/gsad.c (redirect_pid): New variable.
	(gsad_cleanup): Kill redirect child in parent.
	(main): Set redirect_pid in parent.  Set SIGCHLD to SIG_IGN.  Remove
	pidfile creation from redirect child.

2010-01-21  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/oap.xsl (user) [edit]: Switch the modify_password values.

2010-01-21  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/oap.xsl (user): Account for "custom" access rules.

2010-01-20  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/oap.xsl (user) [edit]: Make the Host Access radios match
	the user's rights.

2010-01-20  Matthew Mundell <matthew.mundell@intevation.de>

	* src/gsad.c (exec_omp_post): Revert create_target hosts validator to
	"hosts".

2010-01-20  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/omp.xsl: Make all alt's "Details" for details buttons.

2010-01-20  Matthew Mundell <matthew.mundell@intevation.de>

	Add user details page and editing of user details.

	* src/gsad.c (init_validator): Add "edit_user", "get_user" and "save_user"
	commands.  Add rule "modify_password".
	(struct req_parms): Add modify_password.
	(free_resources, serve_post): Add modify_password handling.
	(exec_omp_post): Add save_user command.
	(exec_omp_get): Add edit_user and get_user commands.

	* src/gsad_oap.c (save_user_oap, edit_user_oap, get_user_oap): New