@@ -211,6 +211,7 @@ table.odd {
 .gb_window_part_center {
  background: url('img/style/window_dec_b.png') repeat-x;
  height: 32px;
+ background-color: #70C000;
  color: #FFFFFF;
  font-weight: bold;
  padding-top:5px;
@@ -259,6 +260,7 @@ table.odd {
 
 .gb_window_part_center_error {
  background: url('img/style/window_dec_b_error.png') repeat-x;
+ background-color: #CC0000;
  height: 32px;
  color: #FFFFFF;
  font-weight: bold;
@@ -291,25 +293,39 @@ table.odd {
 
 /* Logo Bar */
 .logo_l {
+ color:#FFFFFF;
+ background-color: #3A3A3A;
  float:left;
  margin:0px;
+}
+
+.logo_l img {
+ color: #FFFFFF;
+}
+
+.logo_l a {
+ color: #FFFFFF;
 }
 
 .logo_r {
  float:right;
  background: url('img/style/logo_r.png');
+ background-color: #3A3A3A;
  height: 51px;
  width: 9px;
 }
 
 .logo_m {
  background: url('img/style/logo_m.png');
+ background-color: #3A3A3A;
  height: 51px;
 }
 
 /* Logout panel */
 .logout_panel {
  color:#FFFFFF;
+ background: url('img/style/logo_m.png');
+ background-color: #3A3A3A;
  float:right;
  margin: 3px;
  vertical-align:top;
